# euler

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  Makefile  README  _autobuild.py  _subprocess.py  autobuild.py  autobuild.sh  build_old.sh  p18.cpp  prime.cpp  stdin_test.py
cmake/Modules/: FindGMP.cmake
data/: comma.txt  commasp.txt  life_glider.txt  life_toad.txt  sq_bad.txt  sudoku1.txt  triangle_bad.txt
src/: CMakeLists.txt  PrimeFinder.cpp  PrimeFinder.hpp  bitmask.cpp  euler19.pl  fibs_test.cpp  gmp_test.cpp  itoa.c  itoa.h  life.cpp  matrix.cpp  matrix.hpp  matrix_notes.cc  notes_sudoku.txt  notes_zeck_pattern.txt  p18.cpp  p18.hpp  p19.cpp  p2.cpp  p25.cpp  p25.hpp  p27.cpp  p29.cpp  p297.cpp  p35.cpp  p36.cpp  p37.cpp  p39.cpp  p52.cpp  prime.cpp  sudoku.cpp  utilities.cpp  utilities.hpp
